# marketpulse

./: .gitignore  AUDIT_SUMMARY.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  PROJECT_STATUS.md  README.md  README.md.bak
.github/workflows/: ci.yml  rust.yml
benches/: performance.rs
docs/: README.md  architecture.mmd  data_flow.mmd
examples/: basic_usage.rs  multiple_symbols.rs  trading_signals.rs
src/: lib.rs  main.rs
tests/: integration_tests.rs
